# jp_utils

./: .gitignore  Cargo.toml  README.md
benches/: my_bench.rs
src/: alphabet.rs  constants.rs  counter.rs  hiragana.rs  lib.rs  radicals.rs  tokenize.rs  trait_ext.rs
src/furi/: cformat.rs  compare.rs  mod.rs
src/furi/parse/: gen.rs  mod.rs  unchecked.rs
src/furi/segment/: encode.rs  mod.rs  s_owned.rs  s_ref.rs  traits.rs
src/furi/segment/iter/: flatten.rs  lit_readings.rs  mod.rs
src/furi/segment/kanji/: as_kanji.rs  k_kref.rs  k_owned.rs  mod.rs
src/furi/seq/: iter.rs  mod.rs  reading.rs
src/furigana/: as_part.rs  cformat.rs  compare.rs  encode.rs  flatten_iter.rs  mod.rs  parse.rs  reading_iter.rs  reading_part.rs  reading_part_ref.rs
src/furigana/parse/: check.rs  gen.rs  mod.rs  reading.rs  unchecked.rs
src/furigana/part/: as_part.rs  encode.rs  mod.rs  p_ref.rs
src/furigana/part/iter/: flatten.rs  mod.rs
src/furigana/segment/: as_segment.rs  encode.rs  encoder.rs  mod.rs  seg_ref.rs
src/furigana/segment/iter/: flatten.rs  mod.rs
src/furigana/seq/: iter.rs  mod.rs  reading.rs
src/reading/: mod.rs  r_owned.rs  r_ref.rs  traits.rs
