[package]
description = "Utils for working with Japanese text."
name = "jp_utils"
authors = ["jojii <jojii@gmx.net>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = {version = "0.10.5", optional = true}
serde = { version = "1.0.159", features = ['derive'], optional = true }

[dev-dependencies]
test-case = "3.1.0"
criterion = "0.4.0"
rand = "0.8.5"
serde_json = '1.0.95'

[features]
default = ["furigana", "serde"]
hiragana = []
furigana = ["itertools"]

[[bench]]
name = "my_bench"
harness = false
