[package]
description = "Utils for working with Japanese text."
name = "jp_utils"
authors = ["jojii <jojii@gmx.net>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = {version = "0.10.5", optional = true}
serde = { version = "1.0.160", features = ['derive'], optional = true }
tinyvec = { version = "1.6.0", features = ["alloc"] }

[dev-dependencies]
test-case = "3.1.0"
criterion = "0.4.0"
rand = "0.8.5"
serde_json = "1.0.96"

[features]
default = ["furigana", "serde"]
full = ["furigana","serde","hiragana"]
hiragana = []
furigana = ["itertools"]

[[bench]]
name = "my_bench"
harness = false
