[package]
description = "Utils for working with Japanese text."
name = "jp_utils"
authors = ["jojii <jojii@gmx.net>"]
keywords = ["japanese","languages","parse","charset"]
categories = ["text-processing"]
version = "0.1.7"
edition = "2021"
repository = "https://github.com/JojiiOfficial/jp_utils"
license = "AGPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = {version = "0.11", optional = true}
serde = { version = "1.0", default_features = false, features = ["derive", "std"], optional = true }
tinyvec = { version = "1.6", default_features = false, features = ["alloc"] }

[dev-dependencies]
test-case = "3.1.0"
criterion = "0.5.1"
rand = "0.8.5"
serde_json = "1.0.96"

[features]
default = ["furigana"]
full = ["furigana","serde","hiragana"]
hiragana = []
furigana = ["itertools"]
with_serde = ["tinyvec/serde","serde"]

[[bench]]
name = "my_bench"
harness = false
